--- a/lib/extract/netcdf/lfric/kernel_data_netcdf.jinja
+++ b/lib/extract/netcdf/lfric/kernel_data_netcdf.jinja
@@ -1,7 +1,14 @@
+{# Added this as jinja code so that it is understood that the
+   comment does not apply to THIS file. #}
+{{ "! ================================================== !" }}
+{{ "! THIS FILE IS CREATED FROM THE JINJA TEMPLATE FILE  !" }}
+{{ "! DO NOT MODIFY DIRECTLY                             !" }}
+{{ "! ================================================== !" }}
+
 ! -----------------------------------------------------------------------------
 ! BSD 3-Clause License
 !
-! Copyright (c) 2020-2021, Science and Technology Facilities Council.
+! Copyright (c) 2020-2022, Science and Technology Facilities Council.
 ! All rights reserved.
 !
 ! Redistribution and use in source and binary forms, with or without
@@ -41,6 +48,8 @@
 !! the requested input and output parameters to a NetCDF file.
 !!
 
+{% set ALL_PREC = ["32", "64"] -%}
+
 module extract_psy_data_mod
 
     use, intrinsic :: iso_fortran_env, only : int64, int32
@@ -56,12 +65,20 @@ module extract_psy_data_mod
     type, extends(ExtractNetcdfBaseType), public :: extract_PsyDataType
 
     contains
-
+        {% set all_declares=[] -%}
+        {% set all_writes=[] -%}
+        {% for prec in ALL_PREC %}
+        procedure :: DeclareField_r{{prec}}
+        procedure :: WriteField_r{{prec}}
+        procedure :: DeclareFieldVector_r{{prec}}
+        procedure :: WriteFieldVector_r{{prec}}
+          {{- all_declares.append("DeclareField_r{{prec}}") or ""}}
+          {{- all_declares.append("DeclareFieldVector_r{{prec}}") or ""}}
+          {{- all_writes.append("WriteField_r{{prec}}") or ""}}
+          {{- all_writes.append("WriteFieldVector_r{{prec}}") or ""}}
+        {% endfor %}
+        
         ! The various procedures defined here
-        procedure :: DeclareField
-        procedure :: WriteField
-        procedure :: DeclareFieldVector
-        procedure :: WriteFieldVector
         procedure :: DeclareIntField
         procedure :: WriteIntField
         procedure :: DeclareIntFieldVector
@@ -69,8 +86,10 @@ module extract_psy_data_mod
 
         !> Declare generic interface for PreDeclareVariable:
         generic, public :: PreDeclareVariable => &
-                           DeclareField,         &
-                           DeclareFieldVector,   &
+        {% for prec in ALL_PREC %}
+                           DeclareField_r{{prec}},     &
+                           DeclareFieldVector_r{{prec}},     &
+        {% endfor %}
                            DeclareIntField,      &
                            DeclareIntFieldVector
 
@@ -78,8 +97,10 @@ module extract_psy_data_mod
         !! which in case of the kernel extraction writes the data to
         !! the NetCDF file.
         generic, public :: ProvideVariable => &
-                           WriteField,        &
-                           WriteFieldVector,  &
+        {% for prec in ALL_PREC %}
+                           WriteField_r{{prec}},     &
+                           WriteFieldVector_r{{prec}},     &
+        {% endfor %}
                            WriteIntField,     &
                            WriteIntFieldVector
 
@@ -87,30 +108,126 @@ module extract_psy_data_mod
 
 contains
 
+
+    {% for prec in ALL_PREC %}
+
     ! -------------------------------------------------------------------------
-    !> This subroutine declares an LFRic field with real-valued data.
+    !> This subroutine declares an LFRic field with real-valued 
+    !! {{prec}}-bit data.
     !! It calls the PreDeclareVariable function provided by the base class
     !! (depending on the type of the argument, e.g. it might call
     !! DeclareArray1dDouble).
     !! @param[in,out] this The instance of the extract_PsyDataType.
     !! @param[in] name The name of the variable (string).
     !! @param[in] value The value of the variable.
-    subroutine DeclareField(this, name, value)
+    subroutine DeclareField_r{{prec}}(this, name, value)
 
-        use field_mod, only : field_type, field_proxy_type
+        use field_r{{prec}}_mod, only : field_r{{prec}}_type, field_r{{prec}}_proxy_type
 
         implicit none
 
         class(extract_PsyDataType), intent(inout), target :: this
         character(*), intent(in)                          :: name
-        type(field_type), intent(in)                      :: value
+        type(field_r{{prec}}_type), intent(in)                  :: value
 
-        type(field_proxy_type) :: value_proxy
+        type(field_r{{prec}}_proxy_type) :: value_proxy
 
         value_proxy = value%get_proxy()
         call this%PreDeclareVariable(name, value_proxy%data)
 
-    end subroutine DeclareField
+    end subroutine DeclareField_r{{prec}}
+
+    ! -------------------------------------------------------------------------
+    !> This subroutine writes the values of an LFRic real-valued {{prec}}-bit field.
+    !! to the NetCDF file. It uses the corresponding function
+    !! provided by the base class.
+    !! @param[in,out] this The instance of the extract_PsyDataType.
+    !! @param[in] name The name of the variable (string).
+    !! @param[in] value The value of the variable.
+    subroutine WriteField_r{{prec}}(this, name, value)
+
+        use field_r{{prec}}_mod, only : field_r{{prec}}_type, field_r{{prec}}_proxy_type
+
+        implicit none
+
+        class(extract_PsyDataType), intent(inout), target :: this
+        character(*), intent(in)                          :: name
+        type(field_r{{prec}}_type), intent(in)                  :: value
+
+        type(field_r{{prec}}_proxy_type) :: value_proxy
+
+        value_proxy = value%get_proxy()
+        call this%ProvideVariable(name, value_proxy%data)
+
+    end subroutine WriteField_r{{prec}}
+
+    ! -------------------------------------------------------------------------
+    !> This subroutine declares an LFric real-valued {{prec}}-bit field vector.
+    !! Each component of the vector is stored as a separate variable, using the
+    !! corresponding array function of the base class.
+    !! @param[in,out] this The instance of the extract_PSyDataType.
+    !! @param[in] name The name of the variable (string).
+    !! @param[in] value The value of the variable.
+    subroutine DeclareFieldVector_r{{prec}}(this, name, value)
+
+        use field_r{{prec}}_mod, only : field_r{{prec}}_type, field_r{{prec}}_proxy_type
+
+        implicit none
+
+        class(extract_PSyDataType), intent(inout), target :: this
+        character(*), intent(in)                          :: name
+        type(field_r{{prec}}_type), dimension(:), intent(in)        :: value
+
+        integer                :: i
+        type(field_r{{prec}}_proxy_type) :: value_proxy
+        character(9)           :: number
+
+        ! Provide each component of the vector as an individual 1d array.
+        ! The base class will re-allocate internal array sizes if required
+        do i = 1, size(value)
+            value_proxy = value(i)%get_proxy()
+            ! We add a '%' here to avoid a potential name clash if
+            ! the user should have a vector field 'a' (which is now stored
+            ! as a%1, a%2, ...), and a field 'a1'
+            write(number, '("%",i0)') i
+            call this%PreDeclareVariable(name//trim(number), value_proxy%data)
+        enddo
+
+    end subroutine DeclareFieldVector_r{{prec}}
+
+    ! -------------------------------------------------------------------------
+    !> This subroutine writes an LFRic real-valued {{prec}}-bit field vector to
+    !! the NetCDF file. Each component is stored as an individual variable using
+    !! the corresponding array function of the base class.
+    !! @param[in,out] this The instance of the extract_PSyDataType.
+    !! @param[in] name The name of the variable (string).
+    !! @param[in] value The value of the variable.
+    subroutine WriteFieldVector_r{{prec}}(this, name, value)
+
+        use field_r{{prec}}_mod, only : field_r{{prec}}_type, field_r{{prec}}_proxy_type
+
+        implicit none
+
+        class(extract_PSyDataType), intent(inout), target :: this
+        character(*), intent(in)                          :: name
+        type(field_r{{prec}}_type), dimension(:), intent(in)        :: value
+
+        integer                :: i
+        type(field_r{{prec}}_proxy_type) :: value_proxy
+        character(9)           :: number
+
+        ! Provide each dimension of the vector as an individual 1d array.
+        do i = 1, size(value, 1)
+            value_proxy = value(i)%get_proxy()
+            write(number, '("%",i0)') i
+            call this%ProvideVariable(name//trim(number), value_proxy%data)
+        enddo
+
+    end subroutine WriteFieldVector_r{{prec}}
+
+
+
+    {% endfor %}
 
     ! -------------------------------------------------------------------------
     !> This subroutine declares an LFRic field with integer-valued data.
@@ -139,30 +256,6 @@ contains
     end subroutine DeclareIntField
 
     ! -------------------------------------------------------------------------
-    !> This subroutine writes the values of an LFRic real-valued field.
-    !! to the NetCDF file. It uses the corresponding function
-    !! provided by the base class.
-    !! @param[in,out] this The instance of the extract_PsyDataType.
-    !! @param[in] name The name of the variable (string).
-    !! @param[in] value The value of the variable.
-    subroutine WriteField(this, name, value)
-
-        use field_mod, only : field_type, field_proxy_type
-
-        implicit none
-
-        class(extract_PsyDataType), intent(inout), target :: this
-        character(*), intent(in)                          :: name
-        type(field_type), intent(in)                      :: value
-
-        type(field_proxy_type) :: value_proxy
-
-        value_proxy = value%get_proxy()
-        call this%ProvideVariable(name, value_proxy%data)
-
-    end subroutine WriteField
-
-    ! -------------------------------------------------------------------------
     !> This subroutine writes the values of an LFRic integer-valued field.
     !! to the NetCDF file. It uses the corresponding function
     !! provided by the base class.
@@ -186,40 +279,6 @@ contains
         call this%ProvideVariable(name, value_proxy%data)
 
     end subroutine WriteIntField
-
-    ! -------------------------------------------------------------------------
-    !> This subroutine declares an LFric real-valued field vector. Each
-    !! component of the vector is stored as a separate variable, using the
-    !! corresponding array function of the base class.
-    !! @param[in,out] this The instance of the extract_PSyDataType.
-    !! @param[in] name The name of the variable (string).
-    !! @param[in] value The value of the variable.
-    subroutine DeclareFieldVector(this, name, value)
-
-        use field_mod, only : field_type, field_proxy_type
-
-        implicit none
-
-        class(extract_PSyDataType), intent(inout), target :: this
-        character(*), intent(in)                          :: name
-        type(field_type), dimension(:), intent(in)        :: value
-
-        integer                :: i
-        type(field_proxy_type) :: value_proxy
-        character(9)           :: number
-
-        ! Provide each component of the vector as an individual 1d array.
-        ! The base class will re-allocate internal array sizes if required
-        do i = 1, size(value)
-            value_proxy = value(i)%get_proxy()
-            ! We add a '%' here to avoid a potential name clash if
-            ! the user should have a vector field 'a' (which is now stored
-            ! as a%1, a%2, ...), and a field 'a1'
-            write(number, '("%",i0)') i
-            call this%PreDeclareVariable(name//trim(number), value_proxy%data)
-        enddo
-
-    end subroutine DeclareFieldVector
 
     ! -------------------------------------------------------------------------
     !> This subroutine declares an LFric integer-valued field vector. Each
@@ -255,36 +314,6 @@ contains
         enddo
 
     end subroutine DeclareIntFieldVector
-
-    ! -------------------------------------------------------------------------
-    !> This subroutine writes an LFRic real-valued field vector to the NetCDF
-    !! file. Each component is stored as an individual variable using the
-    !! corresponding array function of the base class.
-    !! @param[in,out] this The instance of the extract_PSyDataType.
-    !! @param[in] name The name of the variable (string).
-    !! @param[in] value The value of the variable.
-    subroutine WriteFieldVector(this, name, value)
-
-        use field_mod, only : field_type, field_proxy_type
-
-        implicit none
-
-        class(extract_PSyDataType), intent(inout), target :: this
-        character(*), intent(in)                          :: name
-        type(field_type), dimension(:), intent(in)        :: value
-
-        integer                :: i
-        type(field_proxy_type) :: value_proxy
-        character(9)           :: number
-
-        ! Provide each dimension of the vector as an individual 1d array.
-        do i = 1, size(value, 1)
-            value_proxy = value(i)%get_proxy()
-            write(number, '("%",i0)') i
-            call this%ProvideVariable(name//trim(number), value_proxy%data)
-        enddo
-
-    end subroutine WriteFieldVector
 
 ! -------------------------------------------------------------------------
     !> This subroutine writes an LFRic integer-valued field vector to the
