--- a/lib/nan_test/lfric/nan_test.jinja
+++ b/lib/nan_test/lfric/nan_test.jinja
@@ -1,7 +1,14 @@
+{# Added this as jinja code so that it is understood that the
+   comment does not apply to THIS file. #}
+{{ "! ================================================== !" }}
+{{ "! THIS FILE IS CREATED FROM THE JINJA TEMPLATE FILE  !" }}
+{{ "! DO NOT MODIFY DIRECTLY                             !" }}
+{{ "! ================================================== !" }}
+
 ! -----------------------------------------------------------------------------
 ! BSD 3-Clause License
 !
-! Copyright (c) 2020-2021, Science and Technology Facilities Council.
+! Copyright (c) 2020-2022, Science and Technology Facilities Council.
 ! All rights reserved.
 !
 ! Redistribution and use in source and binary forms, with or without
@@ -37,14 +44,18 @@
 !> This module implements a NAN verification for the LFRic API
 !!
 
+{% set ALL_PREC = ["32", "64"] -%}
+
 module nan_test_psy_data_mod
 
     use, intrinsic :: iso_fortran_env, only : int64, int32,   &
                                               real32, real64, &
                                               stderr => Error_Unit
-    use field_mod, only : field_type
-    use integer_field_mod, only : integer_field_type
-    use nan_test_base_mod, only : NANTestBaseType, is_enabled
+    {% for prec in ALL_PREC %}
+    use field_r{{prec}}_mod, only : field_r{{prec}}_type
+    {% endfor %}
+    use integer_field_mod, only   : integer_field_type
+    use nan_test_base_mod, only   : NANTestBaseType, is_enabled
 
     implicit none
 
@@ -53,33 +64,48 @@ module nan_test_psy_data_mod
     contains
 
         ! The LFRic-specific procedures defined here
-        procedure :: DeclareField
-        procedure :: ProvideField
-        procedure :: DeclareFieldVector
-        procedure :: ProvideFieldVector
+        {% set all_declares=[] -%}
+        {% set all_writes=[] -%}
+        {% for prec in ALL_PREC %}
+        procedure :: DeclareField_r{{prec}}
+        procedure :: ProvideField_r{{prec}}
+        procedure :: DeclareFieldVector_r{{prec}}
+        procedure :: ProvideFieldVector_r{{prec}}
+          {{- all_declares.append("DeclareField_r{{prec}}") or ""}}
+          {{- all_declares.append("DeclareFieldVector_r{{prec}}") or ""}}
+          {{- all_writes.append("WriteField_r{{prec}}") or ""}}
+          {{- all_writes.append("WriteFieldVector_r{{prec}}") or ""}}
+        {% endfor %}
+
         procedure :: DeclareIntField
         procedure :: ProvideIntField
         procedure :: DeclareIntFieldVector
         procedure :: ProvideIntFieldVector
 
-        ! Declare generic interface for PreDeclareVariable:
-        generic, public :: PreDeclareVariable => &
-                           DeclareField,         &
-                           DeclareFieldVector,   &
-                           DeclareIntField,      &
+        !> Declare generic interface for PreDeclareVariable:
+        generic, public :: PreDeclareVariable =>  &
+        {% for prec in ALL_PREC %}
+                           DeclareField_r{{prec}},      &
+                           DeclareFieldVector_r{{prec}},&
+        {% endfor %}
+                           DeclareIntField,       &
                            DeclareIntFieldVector
 
         !> The generic interface for providing the value of variables
         !! (which checks for non normal IEEE numbers)
-        generic, public :: ProvideVariable =>  &
-                           ProvideField,       &
-                           ProvideFieldVector, &
-                           ProvideIntField,    &
+        generic, public :: ProvideVariable =>     &
+        {% for prec in ALL_PREC %}
+                           ProvideField_r{{prec}},      &
+                           ProvideFieldVector_r{{prec}},&
+        {% endfor %}
+                           ProvideIntField,       &
                            ProvideIntFieldVector
 
     end type nan_test_PSyDataType
 
 contains
+
+    {% for prec in ALL_PREC %}
 
     ! -------------------------------------------------------------------------
     !> This subroutine declares LFRic real-valued fields. No functionality is
@@ -87,15 +113,90 @@ contains
     !! @param[in,out] this The instance of the nan_test_PSyDataType.
     !! @param[in] name The name of the variable (string).
     !! @param[in] value The value of the variable.
-    subroutine DeclareField(this, name, value)
+    subroutine DeclareField_r{{prec}}(this, name, value)
 
         implicit none
 
         class(nan_test_PSyDataType), intent(inout), target :: this
-        character(*), intent(in) :: name
-        type(field_type), intent(in) :: value
+        character(*), intent(in)                           :: name
+        type(field_r{{prec}}_type), intent(in)                   :: value
 
-    end subroutine DeclareField
+    end subroutine DeclareField_r{{prec}}
+
+    ! -------------------------------------------------------------------------
+    !> This subroutine checks whether a real-valued LFRic field has NAN or
+    !! infinite floating-point values.
+    !! @param[in,out] this The instance of the nan_test_PSyDataType.
+    !! @param[in] name The name of the variable (string).
+    !! @param[in] value The value of the variable.
+    subroutine ProvideField_r{{prec}}(this, name, value)
+
+        use field_r{{prec}}_mod, only : field_r{{prec}}_type, &
+                                  field_r{{prec}}_proxy_type
+
+        implicit none
+
+        class(nan_test_PSyDataType), intent(inout), target :: this
+        character(*), intent(in)                           :: name
+        type(field_r{{prec}}_type), intent(in)                   :: value
+
+        type(field_r{{prec}}_proxy_type)                         :: value_proxy
+
+        if (.not. is_enabled) return
+
+        if (this%verbosity>1) then
+            write(stderr, *) "PSyData - testing ", name
+        endif
+        value_proxy = value%get_proxy()
+        call this%ProvideVariable(name, value_proxy%data)
+
+    end subroutine ProvideField_r{{prec}}
+
+    ! -------------------------------------------------------------------------
+    !> This subroutine declares LFRic real-valued field vectors. No
+    !! functionality is needed here, so it is just an empty function.
+    !! @param[in,out] this The instance of the nan_test_PSyDataType.
+    !! @param[in] name The name of the variable (string).
+    !! @param[in] value The value of the variable.
+    subroutine DeclareFieldVector_r{{prec}}(this, name, value)
+
+        implicit none
+
+        class(nan_test_PSyDataType), intent(inout), target :: this
+        character(*), intent(in)                           :: name
+        type(field_r{{prec}}_type), dimension(:), intent(in)     :: value
+
+    end subroutine DeclareFieldVector_r{{prec}}
+
+    ! -------------------------------------------------------------------------
+    !> This subroutine checks whether a real-valued LFRic vector field has NAN
+    !! or infinite floating-point values.
+    !! @param[in,out] this The instance of the nan_test_PSyDataType.
+    !! @param[in] name The name of the variable (string).
+    !! @param[in] value The vector of fields.
+    subroutine ProvideFieldVector_r{{prec}}(this, name, value)
+
+        implicit none
+
+        class(nan_test_PSyDataType), intent(inout), target :: this
+        character(*), intent(in)                           :: name
+        type(field_r{{prec}}_type), dimension(:), intent(in)     :: value
+
+        integer      :: i
+        character(8) :: index_string   ! Enough for a 6 digit number plus '()'
+
+        if (.not. is_enabled) return
+
+        ! Provide each member of the vector as a normal field. This way
+        ! the NAN/infinite testing will be done for each member individually.
+        do i = 1, size(value, 1)
+            write(index_string, '("(",i0,")")') i
+            call this%ProvideVariable(name//trim(index_string), value(i))
+        enddo
+
+    end subroutine ProvideFieldVector_r{{prec}}
+
+    {% endfor %}
 
     ! -------------------------------------------------------------------------
     !> This subroutine declares LFRic integer-valued fields. No functionality
@@ -112,34 +213,6 @@ contains
         type(integer_field_type), intent(in) :: value
 
     end subroutine DeclareIntField
-
-    ! -------------------------------------------------------------------------
-    !> This subroutine checks whether a real-valued LFRic field has NAN or
-    !! infinite floating-point values.
-    !! @param[in,out] this The instance of the nan_test_PSyDataType.
-    !! @param[in] name The name of the variable (string).
-    !! @param[in] value The value of the variable.
-    subroutine ProvideField(this, name, value)
-
-        use field_mod, only : field_type, field_proxy_type
-
-        implicit none
-
-        class(nan_test_PSyDataType), intent(inout), target :: this
-        character(*), intent(in)                           :: name
-        type(field_type), intent(in)                       :: value
-
-        type(field_proxy_type) :: value_proxy
-
-        if (.not. is_enabled) return
-
-        if (this%verbosity>1) then
-            write(stderr, *) "PSyData - testing ", name
-        endif
-        value_proxy = value%get_proxy()
-        call this%ProvideVariable(name, value_proxy%data)
-
-    end subroutine ProvideField
 
     ! -------------------------------------------------------------------------
     !> This subroutine checks whether an integer-valued LFRic field has NAN or
@@ -171,24 +244,6 @@ contains
     end subroutine ProvideIntField
 
     ! -------------------------------------------------------------------------
-    !> This subroutine declares LFRic real-valued field vectors. No
-    !! functionality is needed here, so it is just an empty function.
-    !! @param[in,out] this The instance of the nan_test_PSyDataType.
-    !! @param[in] name The name of the variable (string).
-    !! @param[in] value The value of the variable.
-    subroutine DeclareFieldVector(this, name, value)
-
-        use field_mod, only : field_type
-
-        implicit none
-
-        class(nan_test_PSyDataType), intent(inout), target :: this
-        character(*), intent(in)                           :: name
-        type(field_type), dimension(:), intent(in)         :: value
-
-    end subroutine DeclareFieldVector
-
-    ! -------------------------------------------------------------------------
     !> This subroutine declares LFRic integer-valued field vectors. No
     !! functionality is needed here, so it is just an empty function.
     !! @param[in,out] this The instance of the nan_test_PSyDataType.
@@ -205,36 +260,6 @@ contains
         type(integer_field_type), dimension(:), intent(in) :: value
 
     end subroutine DeclareIntFieldVector
-
-    ! -------------------------------------------------------------------------
-    !> This subroutine checks whether a real-valued LFRic vector field has NAN
-    !! or infinite floating-point values.
-    !! @param[in,out] this The instance of the nan_test_PSyDataType.
-    !! @param[in] name The name of the variable (string).
-    !! @param[in] value The vector of fields.
-    subroutine ProvideFieldVector(this, name, value)
-
-        use field_mod, only : field_type
-
-        implicit none
-
-        class(nan_test_PSyDataType), intent(inout), target :: this
-        character(*), intent(in)                           :: name
-        type(field_type), dimension(:), intent(in)         :: value
-
-        integer      :: i
-        character(8) :: index_string   ! Enough for a 6 digit number plus '()'
-
-        if (.not. is_enabled) return
-
-        ! Provide each member of the vector as a normal field. This way
-        ! the NAN/infinite testing will be done for each member individually.
-        do i = 1, size(value, 1)
-            write(index_string, '("(",i0,")")') i
-            call this%ProvideVariable(name//trim(index_string), value(i))
-        enddo
-
-    end subroutine ProvideFieldVector
 
     ! -------------------------------------------------------------------------
     !> This subroutine checks whether an integer-valued LFRic vector field has
