#1978 Updated punctuation for warning texts about not modifying files automatically created.

--- a/lib/psy_data_base.jinja
+++ b/lib/psy_data_base.jinja
@@ -1,8 +1,8 @@
 {# Added this as jinja code so that it is understood that the
    comment does not apply to THIS file. #}
 {{ "! ================================================== !" }}
-{{ "! THIS FILE IS CREATED FROM THE JINJA TEMPLATE FILE  !" }}
-{{ "! DO NOT MODIFY DIRECTLY                             !" }}
+{{ "! THIS FILE IS CREATED FROM THE JINJA TEMPLATE FILE. !" }}
+{{ "! DO NOT MODIFY DIRECTLY!                            !" }}
 {{ "! ================================================== !" }}
 
 {% if ALL_DIMS is not defined %}
